err/faadata.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/faadata'...
Listing './lib/python3.5/site-packages/faadata/aircraft'...
Compiling './lib/python3.5/site-packages/faadata/aircraft/load.py'...
***   File "./lib/python3.5/site-packages/faadata/aircraft/load.py", line 85
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/faadata/aircraft/management'...
Listing './lib/python3.5/site-packages/faadata/aircraft/management/commands'...
Listing './lib/python3.5/site-packages/faadata/aircraft/migrations'...
Listing './lib/python3.5/site-packages/faadata/aircraft/south_migrations'...
Listing './lib/python3.5/site-packages/faadata/airports'...
Compiling './lib/python3.5/site-packages/faadata/airports/load.py'...
***   File "./lib/python3.5/site-packages/faadata/airports/load.py", line 51
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/faadata/airports/management'...
Listing './lib/python3.5/site-packages/faadata/airports/management/commands'...
Compiling './lib/python3.5/site-packages/faadata/airports/management/commands/ourairports_import.py'...
***   File "./lib/python3.5/site-packages/faadata/airports/management/commands/ourairports_import.py", line 24
    print airport
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/faadata/airports/migrations'...
Listing './lib/python3.5/site-packages/faadata/airports/south_migrations'...
Listing './lib/python3.5/site-packages/faadata/airspace'...
Listing './lib/python3.5/site-packages/faadata/airspace/management'...
Listing './lib/python3.5/site-packages/faadata/airspace/management/commands'...
Listing './lib/python3.5/site-packages/faadata/airspace/migrations'...
Listing './lib/python3.5/site-packages/faadata/awoses'...
Listing './lib/python3.5/site-packages/faadata/awoses/management'...
Listing './lib/python3.5/site-packages/faadata/awoses/management/commands'...
Listing './lib/python3.5/site-packages/faadata/awoses/migrations'...
Listing './lib/python3.5/site-packages/faadata/awoses/south_migrations'...
Listing './lib/python3.5/site-packages/faadata/fadds'...
Listing './lib/python3.5/site-packages/faadata/fadds/management'...
Listing './lib/python3.5/site-packages/faadata/fadds/management/commands'...
Listing './lib/python3.5/site-packages/faadata/fixes'...
Listing './lib/python3.5/site-packages/faadata/fixes/management'...
Listing './lib/python3.5/site-packages/faadata/fixes/management/commands'...
Listing './lib/python3.5/site-packages/faadata/fixes/migrations'...
Listing './lib/python3.5/site-packages/faadata/fixes/south_migrations'...
Listing './lib/python3.5/site-packages/faadata-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
